<?xml version="1.0" encoding="UTF-8"?>
<!--
  pom.xml — Project Object Model
  File này khai báo:
    1. Thông tin định danh project (groupId, artifactId, version)
    2. Các thư viện cần dùng (dependencies)
    3. Cấu hình build (Java version, plugin)

  Khi mở project trong NetBeans, IDE đọc file này và tự tải các thư viện.
-->
<project xmlns="http://maven.apache.org/POM/4.0.0">
    <modelVersion>4.0.0</modelVersion>

    <!-- ===== Định danh project ===== -->
    <!-- groupId  : tên tổ chức/nhóm, theo convention là tên miền đảo ngược.
                    Ví dụ "com.qlxnh" tương đương domain qlxnh.com (giả định).
         artifactId: tên project, viết thường, không dấu, không khoảng trắng.
         version  : phiên bản. SNAPSHOT nghĩa là "đang phát triển, chưa release". -->
    <groupId>com.qlxnh</groupId>
    <artifactId>qlxnh</artifactId>
    <version>1.0-SNAPSHOT</version>

    <!-- packaging=jar nghĩa là build ra file .jar (chuẩn Java app desktop) -->
    <packaging>jar</packaging>
    <name>QLXNH - Quan ly Xuat Nhap Hang</name>

    <!-- ===== Cấu hình chung ===== -->
    <properties>
        <!-- Encoding mã nguồn: bắt buộc UTF-8 để hỗ trợ tiếng Việt -->
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <!-- Java version: bài tập dùng Java 17 (LTS, ổn định, NetBeans hỗ trợ tốt) -->
        <maven.compiler.source>17</maven.compiler.source>
        <maven.compiler.target>17</maven.compiler.target>
    </properties>

    <!-- ===== Thư viện cần dùng ===== -->
    <dependencies>

        <!-- FlatLaf: Look & Feel hiện đại cho Swing, thay cho Metal/Nimbus xấu xí -->
        <dependency>
            <groupId>com.formdev</groupId>
            <artifactId>flatlaf</artifactId>
            <version>3.5</version>
        </dependency>

        <!-- FlatLaf Extras: thêm icon, các utility (tùy chọn nhưng tiện) -->
        <dependency>
            <groupId>com.formdev</groupId>
            <artifactId>flatlaf-extras</artifactId>
            <version>3.5</version>
        </dependency>

        <!-- Microsoft JDBC Driver cho SQL Server: để Java kết nối CSDL -->
        <dependency>
            <groupId>com.microsoft.sqlserver</groupId>
            <artifactId>mssql-jdbc</artifactId>
            <version>12.6.3.jre11</version>
        </dependency>

    </dependencies>

    <build>
        <plugins>
            <!-- Compiler plugin: chỉ định version Java để compile -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.13.0</version>
                <configuration>
                    <source>17</source>
                    <target>17</target>
                </configuration>
            </plugin>

            <!-- Plugin tạo file .jar chạy được (executable jar) gộp cả dependency.
                 Khi build xong có file target/qlxnh-1.0-SNAPSHOT.jar chạy bằng:
                 java -jar qlxnh-1.0-SNAPSHOT.jar -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-shade-plugin</artifactId>
                <version>3.5.3</version>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals><goal>shade</goal></goals>
                        <configuration>
                            <transformers>
                                <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                                    <!-- Class chứa hàm main() — JVM gọi đầu tiên khi `java -jar`.
                                         Trong dự án này: PhieuNhapMain (launcher dev độc lập của module Lập phiếu nhập).
                                         Khi tích hợp vào hệ thống chung, đổi sang com.qlxnh.MainFrame của nhóm. -->
                                    <mainClass>com.qlxnh.PhieuNhapMain</mainClass>
                                </transformer>
                            </transformers>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>
</project>
